--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
     "babel-preset-vue": "^2.0.2",
     "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.3",
-    "vue-cli-plugin-storybook": "^0.6.1",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "vue-cli-plugin-storybook": "^0.6.1",
     "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.6.10",
     "vue-test-utils": "^1.0.0-beta.11"
